--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -1,4 +1,5 @@
 
+
 <div class="row h-100 g-0" style="margin-left:1%;">
 
   <div class="polaroid mt-5" dir="rtl" style="width:28%;height:85%;margin-right:1%;">
@@ -25,7 +26,7 @@
 
   <div class="polaroid mt-5" style="width:50%;height:85%">
     <!--<iframe src="../../assets/map/index.html" height="100%" width="100%"></iframe>-->
-    <iframe #iframe [src]="view | safe" id="inneriframe" scrolling="no" height="100%" width="100%"></iframe>
+    <iframe id="iframeBox" #iframe [src]="view | safe" id="inneriframe" scrolling="no" height="100%" width="100%"></iframe>
   </div>
 
 
